--- a/src/settings.conf
+++ b/src/settings.conf
@@ -1,4 +1,21 @@
 {
+  "variables": {
+    "font-size": "14px",
+    "font-family": "JetBrainsMono Nerd Font Mono",
+    "spacing-xs": "2px",
+    "spacing-sm": "5px",
+    "spacing-md": "16px",
+    "border-radius-sm": "8px",
+    "border-radius-md": "10px",
+    "border-width": "1px",
+    "border-color": "rgba(255, 255, 255, 0.1)",
+    "transition-fast": "150ms ease",
+    "transition-normal": "250ms ease",
+    "transition-slow": "350ms ease",
+    "shadow-sm": "0 1px 2px rgba(0, 0, 0, 0.1)",
+    "shadow-md": "0 4px 6px rgba(0, 0, 0, 0.1)",
+    "shadow-lg": "0 10px 15px rgba(0, 0, 0, 0.1)"
+  },
   "clock": {
     "format": "12h",
     "updateInterval": 1000
